# near-explorer-contract

./: .gitignore  builder.sh  command.sh  package-lock.json  package.json
.github/workflows/: main.yml
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: tests.rs
neardev/: dev-account  dev-account.env
