[package]
name = "sourcescan"
version = "2.0.0"
authors = ["Andrey Gruzdev"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.5", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
